[gd_scene load_steps=12 format=3 uid="uid://dk8arl1if3lyr"]

[ext_resource type="Texture2D" uid="uid://cgv7xgoy43rbc" path="res://player/crosshair.svg" id="1"]
[ext_resource type="Theme" uid="uid://ckax6htygmelo" path="res://menu/theme/theme.tres" id="2"]
[ext_resource type="PackedScene" uid="uid://e22n700qhxqr" path="res://menu/options/options.tscn" id="3"]
[ext_resource type="Script" path="res://menu/ingame/pause_menu.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://ej6lqf2fptv8" path="res://menu/button.png" id="5"]
[ext_resource type="Texture2D" uid="uid://blcjvv0p0a6v8" path="res://menu/button_pressed.png" id="5_sc8eq"]
[ext_resource type="Texture2D" uid="uid://cfh73c8wnvgol" path="res://menu/button_hover.png" id="6_xrlxa"]
[ext_resource type="Texture2D" uid="uid://h208mfx7dyy2" path="res://menu/button_focus.png" id="7_elacb"]
[ext_resource type="PackedScene" uid="uid://bq8x7k3m2n4p8" path="res://ui/health_bar.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://bq8x7k3m2n4qa" path="res://ui/game_over.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://bqx3vhp7k8y8r" path="res://ui/ticket_display.tscn" id="11_eq555"]

[node name="PauseMenu" type="Control" groups=["pause_menu"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2")
script = ExtResource("4")

[node name="Crosshair" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Crosshair"]
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
texture = ExtResource("1")

[node name="HitMarker" type="Control" parent="Crosshair"]
visible = false
layout_mode = 2

[node name="TopLeft" type="ColorRect" parent="Crosshair/HitMarker"]
modulate = Color(1, 1, 1, 0.8)
layout_mode = 0
offset_left = -12.0
offset_top = -12.0
offset_right = -4.0
offset_bottom = -2.0

[node name="TopRight" type="ColorRect" parent="Crosshair/HitMarker"]
modulate = Color(1, 1, 1, 0.8)
layout_mode = 0
offset_left = 4.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = -2.0

[node name="BottomLeft" type="ColorRect" parent="Crosshair/HitMarker"]
modulate = Color(1, 1, 1, 0.8)
layout_mode = 0
offset_left = -12.0
offset_top = 2.0
offset_right = -4.0
offset_bottom = 12.0

[node name="BottomRight" type="ColorRect" parent="Crosshair/HitMarker"]
modulate = Color(1, 1, 1, 0.8)
layout_mode = 0
offset_left = 4.0
offset_top = 2.0
offset_right = 12.0
offset_bottom = 12.0

[node name="Pause" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonHolder" type="HBoxContainer" parent="Pause"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="MainButtons" type="VBoxContainer" parent="Pause/ButtonHolder"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Resume" type="TextureButton" parent="Pause/ButtonHolder/MainButtons"]
layout_mode = 2
texture_normal = ExtResource("5")
texture_pressed = ExtResource("5_sc8eq")
texture_hover = ExtResource("6_xrlxa")
texture_focused = ExtResource("7_elacb")

[node name="Label" type="Label" parent="Pause/ButtonHolder/MainButtons/Resume"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Resume Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" type="TextureButton" parent="Pause/ButtonHolder/MainButtons"]
layout_mode = 2
texture_normal = ExtResource("5")
texture_pressed = ExtResource("5_sc8eq")
texture_hover = ExtResource("6_xrlxa")
texture_focused = ExtResource("7_elacb")

[node name="Label" type="Label" parent="Pause/ButtonHolder/MainButtons/Options"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenu" type="TextureButton" parent="Pause/ButtonHolder/MainButtons"]
layout_mode = 2
texture_normal = ExtResource("5")
texture_pressed = ExtResource("5_sc8eq")
texture_hover = ExtResource("6_xrlxa")
texture_focused = ExtResource("7_elacb")

[node name="Label" type="Label" parent="Pause/ButtonHolder/MainButtons/MainMenu"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Exit" type="TextureButton" parent="Pause/ButtonHolder/MainButtons"]
layout_mode = 2
texture_normal = ExtResource("5")
texture_pressed = ExtResource("5_sc8eq")
texture_hover = ExtResource("6_xrlxa")
texture_focused = ExtResource("7_elacb")

[node name="Label" type="Label" parent="Pause/ButtonHolder/MainButtons/Exit"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Exit Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" parent="." instance=ExtResource("3")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="HealthBar" parent="." instance=ExtResource("8")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.87
anchor_top = 0.052
anchor_right = 0.87
anchor_bottom = 0.052
offset_left = 208.0
offset_top = -26.8
offset_right = 208.0
offset_bottom = -26.8

[node name="GameOver" parent="." instance=ExtResource("9")]
layout_mode = 1

[node name="DamageOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -25.0
offset_top = 11.0
offset_right = -25.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0, 0, 0)

[node name="AmmoDisplay" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 68
text = "Ammo: --"

[node name="RestockPrompt" type="Label" parent="."]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -20.0
offset_right = 200.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 0.5, 1)
theme_override_font_sizes/font_size = 65
text = "Press 'F' to restock"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TicketDisplay2" parent="." instance=ExtResource("11_eq555")]
layout_mode = 1
offset_left = 483.0
offset_top = 14.0
offset_right = -483.0
offset_bottom = 93.0

[node name="UnstuckPrompt" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -211.0
offset_top = -24.0
offset_right = 221.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 0.5, 1)
theme_override_font_sizes/font_size = 65
text = "Press 'F' to unstuck NPC"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Pause/ButtonHolder/MainButtons/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Pause/ButtonHolder/MainButtons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Pause/ButtonHolder/MainButtons/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Pause/ButtonHolder/MainButtons/Exit" to="." method="_on_Exit_pressed"]
